# DSA-project

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  CONTRIBUTIONS.md  README.md  UPGRADE_GCC.md  build_with_curl.bat  build_with_msys2.ps1  build_with_msys2.sh  install_dependencies.sh
backend/include/route_finder/: allotment.hpp  geometry.hpp  graph.hpp  kdtree.hpp  overpass.hpp  routing.hpp  state.hpp  types.hpp
backend/src/: state.cpp
backend/src/part1_ingestion/: graph.cpp  overpass.cpp
backend/src/part2_spatial/: geometry.cpp  kdtree.cpp
backend/src/part3_allocation/: allotment.cpp  routing.cpp  state.cpp
backend/src/part4_api/: server.cpp
frontend/: app.js  index.html
